--- a/styles/slide.scss
+++ b/styles/slide.scss
@@ -5,7 +5,7 @@
   left: calc(50% - 500px / 2 - 1520.5px);
   top: calc(50% - 351px / 2 + 66.5px);
   border-radius: 74px;
-  border: 1px solid #818181;
+  border: 1px solid #6231ec;
   padding: 30px;
 
   .slide-title {
