--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,11 @@ a {
 * {
   box-sizing: border-box;
 }
+.climate-main {
+  font-family: #0070f3;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 50px);
+}
